--- a/matplotlib/matplotlib_guide.ipynb
+++ b/matplotlib/matplotlib_guide.ipynb
@@ -243,7 +243,7 @@
     "#### One axes starting at (0.25,0.25) and using 25% of the remaining space of figure as height & width (25% of 75%).\n",
     "#### One axes starting at (0.5,0.5) and using 25% of the remaining space of figure as height & width (25% of 75%).\n",
     "\n",
-    "#### The two plots meet in corner due to cordinates and size, while leaving remaining psace i"
+    "#### The two plots meet in corner due to cordinates and size, while leaving remaining space in figure empty."
    ]
   },
   {
